<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:orderInCategory="1"
        android:title="@string/refresh"
        app:showAsAction="always"/>


    <item
        android:id="@+id/menu_grid"
        android:icon="@drawable/ic_grid_on_24dp"
        android:orderInCategory="1"
        android:title="@string/action_grid"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_list"
        android:icon="@drawable/ic_list_24dp"
        android:orderInCategory="2"
        android:visible="false"
        android:title="@string/action_list"
        app:showAsAction="always"/>
</menu>
